[gd_scene load_steps=4 format=3 uid="uid://cf6aml1lrd2yk"]

[ext_resource type="Script" uid="uid://x61s7p2tc3db" path="res://scenes/game/gauge_panel.gd" id="1_6vj7f"]
[ext_resource type="Texture2D" uid="uid://cy0pcorknc8op" path="res://assets/cards/border_thin_pressed.png" id="2_s5ifx"]
[ext_resource type="Texture2D" uid="uid://kwcp6d7oulcg" path="res://assets/cards/border_thin_hover.png" id="3_lr7n5"]

[node name="Gauge" type="PanelContainer"]
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
script = ExtResource("1_6vj7f")

[node name="BackgroundPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="GaugePanel" type="MarginContainer" parent="BackgroundPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GaugeVBox" type="HBoxContainer" parent="BackgroundPanel/GaugePanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15
alignment = 1

[node name="GaugeLabel" type="Label" parent="BackgroundPanel/GaugePanel/GaugeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GAUGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GaugeAmount" type="Label" parent="BackgroundPanel/GaugePanel/GaugeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Focus" type="TextureButton" parent="BackgroundPanel"]
layout_mode = 2
texture_pressed = ExtResource("2_s5ifx")
texture_hover = ExtResource("3_lr7n5")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="BackgroundPanel/Focus" to="." method="_on_focus_pressed"]
